@@ -1,0 +1,11 @@
+#as:
+#objdump: -dr
+
+.*:[ 	]+file format .*
+
+
+Disassembly of section .text:
+
+0+000 <.text>:
+[ 	]+0:[ 	]+4605[ 	]+li[ 	]+a2,1
+[ 	]+2:[ 	]+852e[ 	]+mv[ 	]+a0,a1
