@@ -1,0 +1,3 @@
+.option rvc
+addi a2, zero, 1
+add a0, zero, a1
